2009-04-12 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 591: Apply patch 6 from Mike Lundy: return errors from
	           delegates for some conversion functions.
	* SVN 590: Apply patch 3 from Mike Lundy: prepend CFLAGS instead of
	           appending them (thus allowing user-specific override)
	* SVN 589: Apply patch 2 from Mike Lundy: properly initialize
	           Basler-specific structs.
        * SVN 588: Apply patch 1 from Mike Lundy: disable option for not
	           building example programs.
	
2009-02-18 David Moore  <dcm@acm.org>
	* SVN 587: Juju: Fix missing frames when host controller is OHCI 1.0
	           and packets-per-frame is not a multiple of 8.

2009-02-09 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 586: Apply a patch from Damien Dusha that adds proper memory
	           allocation verifications in AdaptBuffer functions.
	
2009-01-29 David Moore  <dcm@acm.org>
	* SVN 585: Update version and AUTHORS for 2.1.0.  RELEASE 2.1.0.

2009-01-26 David Moore  <dcm@acm.org>
	* SVN 584: Remove private includes from dc1394/linux/capture.h

2009-01-13 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 583: - fix allocation errors in conversions.c and bayer.c
	           - fix bayer conversion problem with cameras sending
	             16bit RAW over MONO16 format.
	           Both fixes thanks to Damien Dusha.
	
2009-01-12 David Moore  <dcm@acm.org>
	* SVN 582: Add missing libusb_set_configuration() and
	           libusb_release_interface() calls to usb backend.

2009-01-05 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 581: configure.in: add quotes around args that use
	           $LIBUSB_LIBS as there may be more than one lib (which
	           leads to a "too many arguments" error)

2009-01-04 David Moore  <dcm@acm.org>
	* SVN 580: Include pkgconfig macros in acinclude.m4 for the benefit
	           of SVN users that don't have pkgconfig installed.
	* SVN 579: Don't let configure fail if libusb-1.0 is not present
