@@ -66,15 +66,39 @@ typedef enum {
     DC1394_VIDEO_MODE_FORMAT7_4,
     DC1394_VIDEO_MODE_FORMAT7_5,
     DC1394_VIDEO_MODE_FORMAT7_6,
-    DC1394_VIDEO_MODE_FORMAT7_7
+    DC1394_VIDEO_MODE_FORMAT7_7,
+    DC1394_VIDEO_MODE_FORMAT7_8,
+    DC1394_VIDEO_MODE_FORMAT7_9,
+    DC1394_VIDEO_MODE_FORMAT7_10,
+    DC1394_VIDEO_MODE_FORMAT7_11,
+    DC1394_VIDEO_MODE_FORMAT7_12,
+    DC1394_VIDEO_MODE_FORMAT7_13,
+    DC1394_VIDEO_MODE_FORMAT7_14,
+    DC1394_VIDEO_MODE_FORMAT7_15,
+    DC1394_VIDEO_MODE_FORMAT7_16,
+    DC1394_VIDEO_MODE_FORMAT7_17,
+    DC1394_VIDEO_MODE_FORMAT7_18,
+    DC1394_VIDEO_MODE_FORMAT7_19,
+    DC1394_VIDEO_MODE_FORMAT7_20,
+    DC1394_VIDEO_MODE_FORMAT7_21,
+    DC1394_VIDEO_MODE_FORMAT7_22,
+    DC1394_VIDEO_MODE_FORMAT7_23,
+    DC1394_VIDEO_MODE_FORMAT7_24,
+    DC1394_VIDEO_MODE_FORMAT7_25,
+    DC1394_VIDEO_MODE_FORMAT7_26,
+    DC1394_VIDEO_MODE_FORMAT7_27,
+    DC1394_VIDEO_MODE_FORMAT7_28,
+    DC1394_VIDEO_MODE_FORMAT7_29,
+    DC1394_VIDEO_MODE_FORMAT7_30,
+    DC1394_VIDEO_MODE_FORMAT7_31
 } dc1394video_mode_t;
-#define DC1394_VIDEO_MODE_MIN            DC1394_VIDEO_MODE_160x120_YUV444
-#define DC1394_VIDEO_MODE_MAX       DC1394_VIDEO_MODE_FORMAT7_7
+#define DC1394_VIDEO_MODE_MIN       DC1394_VIDEO_MODE_160x120_YUV444
+#define DC1394_VIDEO_MODE_MAX       DC1394_VIDEO_MODE_FORMAT7_31
 #define DC1394_VIDEO_MODE_NUM      (DC1394_VIDEO_MODE_MAX - DC1394_VIDEO_MODE_MIN + 1)
 
 /* Special min/max are defined for Format_7 */
 #define DC1394_VIDEO_MODE_FORMAT7_MIN       DC1394_VIDEO_MODE_FORMAT7_0
-#define DC1394_VIDEO_MODE_FORMAT7_MAX       DC1394_VIDEO_MODE_FORMAT7_7
+#define DC1394_VIDEO_MODE_FORMAT7_MAX       DC1394_VIDEO_MODE_FORMAT7_31
 #define DC1394_VIDEO_MODE_FORMAT7_NUM      (DC1394_VIDEO_MODE_FORMAT7_MAX - DC1394_VIDEO_MODE_FORMAT7_MIN + 1)
 
 /**
