@@ -142,6 +142,30 @@ dc1394_get_image_size_from_video_mode(dc1394camera_t *camera, dc1394video_mode_t
     case DC1394_VIDEO_MODE_FORMAT7_5:
     case DC1394_VIDEO_MODE_FORMAT7_6:
     case DC1394_VIDEO_MODE_FORMAT7_7:
+    case DC1394_VIDEO_MODE_FORMAT7_8:
+    case DC1394_VIDEO_MODE_FORMAT7_9:
+    case DC1394_VIDEO_MODE_FORMAT7_10:
+    case DC1394_VIDEO_MODE_FORMAT7_11:
+    case DC1394_VIDEO_MODE_FORMAT7_12:
+    case DC1394_VIDEO_MODE_FORMAT7_13:
+    case DC1394_VIDEO_MODE_FORMAT7_14:
+    case DC1394_VIDEO_MODE_FORMAT7_15:
+    case DC1394_VIDEO_MODE_FORMAT7_16:
+    case DC1394_VIDEO_MODE_FORMAT7_17:
+    case DC1394_VIDEO_MODE_FORMAT7_18:
+    case DC1394_VIDEO_MODE_FORMAT7_19:
+    case DC1394_VIDEO_MODE_FORMAT7_20:
+    case DC1394_VIDEO_MODE_FORMAT7_21:
+    case DC1394_VIDEO_MODE_FORMAT7_22:
+    case DC1394_VIDEO_MODE_FORMAT7_23:
+    case DC1394_VIDEO_MODE_FORMAT7_24:
+    case DC1394_VIDEO_MODE_FORMAT7_25:
+    case DC1394_VIDEO_MODE_FORMAT7_26:
+    case DC1394_VIDEO_MODE_FORMAT7_27:
+    case DC1394_VIDEO_MODE_FORMAT7_28:
+    case DC1394_VIDEO_MODE_FORMAT7_29:
+    case DC1394_VIDEO_MODE_FORMAT7_30:
+    case DC1394_VIDEO_MODE_FORMAT7_31:
         // get the current color mode from the camera
         err=dc1394_format7_get_image_size(camera, video_mode, &sx, &sy);
         if (err!=DC1394_SUCCESS) {
@@ -318,6 +342,30 @@ dc1394_get_color_coding_from_video_mode(dc1394camera_t *camera, dc1394video_mode
     case DC1394_VIDEO_MODE_FORMAT7_5:
     case DC1394_VIDEO_MODE_FORMAT7_6:
     case DC1394_VIDEO_MODE_FORMAT7_7:
+    case DC1394_VIDEO_MODE_FORMAT7_8:
+    case DC1394_VIDEO_MODE_FORMAT7_9:
+    case DC1394_VIDEO_MODE_FORMAT7_10:
+    case DC1394_VIDEO_MODE_FORMAT7_11:
+    case DC1394_VIDEO_MODE_FORMAT7_12:
+    case DC1394_VIDEO_MODE_FORMAT7_13:
+    case DC1394_VIDEO_MODE_FORMAT7_14:
+    case DC1394_VIDEO_MODE_FORMAT7_15:
+    case DC1394_VIDEO_MODE_FORMAT7_16:
+    case DC1394_VIDEO_MODE_FORMAT7_17:
+    case DC1394_VIDEO_MODE_FORMAT7_18:
+    case DC1394_VIDEO_MODE_FORMAT7_19:
+    case DC1394_VIDEO_MODE_FORMAT7_20:
+    case DC1394_VIDEO_MODE_FORMAT7_21:
+    case DC1394_VIDEO_MODE_FORMAT7_22:
+    case DC1394_VIDEO_MODE_FORMAT7_23:
+    case DC1394_VIDEO_MODE_FORMAT7_24:
+    case DC1394_VIDEO_MODE_FORMAT7_25:
+    case DC1394_VIDEO_MODE_FORMAT7_26:
+    case DC1394_VIDEO_MODE_FORMAT7_27:
+    case DC1394_VIDEO_MODE_FORMAT7_28:
+    case DC1394_VIDEO_MODE_FORMAT7_29:
+    case DC1394_VIDEO_MODE_FORMAT7_30:
+    case DC1394_VIDEO_MODE_FORMAT7_31:
         // get the current color mode from the camera
         err=dc1394_format7_get_color_coding(camera, video_mode, &id);
         if (err!=DC1394_SUCCESS) {
